--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main</title>
 </head>
 <body>
     <h1>Hello world</h1>
-    <p> secretaaa</p>
-    <img src="http://itsaian.tech/img/jullinne_kaye.png" alt="">
+    <p> Hello Madlang People Mabuhay</p>
+    <a href="test.html">Links are </a>
+    <a>Inline Elements</a>
+    <a>so they fit side-by-side</a>
+    
+<h1><b>This is a h1 Heading</b></h1>
+<h2><b>This is a h2 Heading</b></h2>
+<h3><b>This is a h3 Heading</b></h3>
+<h4><b>This is a h4 Heading</b></h4>
+<h5><b>This is a h5 Heading</b></h5>
+<h6><b>This is a h6 Heading</b></h6>
 </body>
 </html>
 
