--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     </style>
     <h1>Hello world</h1>
-    <p> Hello Madlang People Mabuhay</p>
+    <p> NABAGO TO</p>
     <a href="test.html" style="background-color: yellow; text-decoration: none;">Links are </a>
     <a style="color: pink">Inline Elements</a>
     <a>so they fit side-by-side</a>
