New changes with name and css

--- a/semantics.html
+++ b/semantics.html
@@ -46,7 +46,7 @@
 
 <footer>
     <p>&copy;2025 Your Company Name &bull;All Rights Reserved &reg;</p>
-    <p>Made with &hearts; by JeiSquared</p>
+    <p>Made with &hearts; by Aian</p>
 </footer>
 
 </main>
